--- a/build.gradle
+++ b/build.gradle
@@ -10,26 +10,44 @@ buildscript {
     }
 }
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-
-group = 'com.teste'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 1.8
-
-repositories {
-    mavenCentral()
+plugins {
+    id "org.springframework.boot" version "2.0.5.RELEASE"
+    id 'java-library'
+    id 'java'
 }
 
-
 dependencies {
-    implementation('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
-    implementation('org.springframework.boot:spring-boot-starter-webflux')
-    runtimeOnly('org.springframework.boot:spring-boot-devtools')
-    compileOnly('org.projectlombok:lombok')
-    testImplementation('org.springframework.boot:spring-boot-starter-test')
-    testImplementation('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
-    testImplementation('io.projectreactor:reactor-test')
+    compile project(':contract')
+    compile project(':impl')
+}
+
+allprojects {
+
+    apply plugin: 'java'
+    apply plugin: 'eclipse'
+    apply plugin: 'idea'
+    apply plugin: 'org.springframework.boot'
+    apply plugin: 'io.spring.dependency-management'
+
+    group = 'com.teste'
+    version = '0.0.1-SNAPSHOT'
+    sourceCompatibility = 1.8
+
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        compile('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
+//        compile group: 'org.projectlombok', name: 'lombok', version: '1.18.2'
+        compile('org.springframework.boot:spring-boot-starter-webflux')
+        compile('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
+
+        compileOnly('org.projectlombok:lombok')
+
+        runtimeOnly('org.springframework.boot:spring-boot-devtools')
+
+        testCompile('org.springframework.boot:spring-boot-starter-test')
+        testCompile('io.projectreactor:reactor-test')
+    }
 }
